Fixed item gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ html {
 }
 
 .grid-container {
-  @apply grid grid-flow-row sm:grid-cols-3 grid-cols-1 max-w-screen-desktop-small mx-auto sm:p-0 px-4;
+  @apply grid grid-flow-row sm:grid-cols-3 grid-cols-1 max-w-screen-desktop-small mx-auto sm:p-0 px-4 gap-y-32 gap-x-4;
 }
 
 .grid-container > div {
